# Freight

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CRANE_PROJECT.md  Cargo.toml  README.md  TODO.md  chat.md
.devcontainer/: devcontainer.json
.github/workflows/: release.yml  rust.yml
cmake/: Freight.cmake  README.md
compiler-templates/: clang.toml  dmd.toml  gcc.toml  gfortran.toml  gnat.toml  hipcc.toml  icpx.toml  ispc.toml  nvcc.toml  opencl.toml
crates/crane/: Cargo.toml
crates/crane-core/: Cargo.toml
crates/crane-core/src/: dep_cmds.rs  error.rs  git.rs  lib.rs  lock.rs  new.rs  output.rs
crates/crane-core/src/doc/: extract.rs  mod.rs  render.rs  render_latex.rs  render_md.rs
crates/crane-core/src/importer/: cmake.rs  detect.rs  emit.rs  makefile.rs  meson.rs  mod.rs
crates/crane-core/src/manifest/: find.rs  mod.rs  types.rs  validate.rs
crates/crane-core/src/toolchain/: cache.rs  debugger.rs  detect.rs  engine.rs  mod.rs  template.rs
crates/crane-core/tests/: importer.rs
crates/crane-core/tests/importer_fixtures/cmake/: CMakeLists.txt
crates/crane-doc/: Cargo.toml
crates/crane-importer/: Cargo.toml
crates/crane-importer/src/: cmake.rs  emit.rs  lib.rs  makefile.rs  meson.rs
crates/crane-importer/tests/: importer.rs
crates/crane-lsp/: Cargo.toml
crates/crane-lsp/src/: backend.rs  completion.rs  docs.rs  lib.rs  main.rs  position.rs
crates/crane-migrator/: Cargo.toml
crates/crane/src/: main.rs  output.rs
crates/crane/src/commands/: build.rs  check.rs  compile_commands.rs  debug.rs  deps.rs  doc.rs  migrate.rs  mod.rs  new.rs  toolchain.rs
crates/freight/: Cargo.toml  README.md
crates/freight-core/: Cargo.toml  README.md
crates/freight-doc/: Cargo.toml  README.md
crates/freight-doc/src/: extract.rs  extract_clang.rs  lib.rs  main.rs  markdown.rs  render.rs  render_json.rs  render_md.rs  render_tui.rs
crates/freight-doc/src/util/: latex.rs
crates/freight-doc/tests/: extract_examples.rs
crates/freight-doc/tests/fixtures/ada/: matrix.ads
crates/freight-doc/tests/fixtures/c/: buffer.h
crates/freight-doc/tests/fixtures/cpp/: geometry.hpp
crates/freight-doc/tests/fixtures/d/: parser.d
crates/freight-doc/tests/fixtures/fortran/: vectors.f90
crates/freight-doc/tests/fixtures/rust/: strings.rs
crates/freight-lsp/: Cargo.toml
crates/freight-lsp/src/: backend.rs  completion.rs  docs.rs  fortran.rs  lib.rs  main.rs  position.rs
crates/freight-migrator/: Cargo.toml
crates/freight-vcpkg-import/: Cargo.toml
crates/freight-vcpkg-import/src/: main.rs
crates/freight/src/: completion.rs  main.rs  output.rs
crates/freight/src/commands/: add_tui.rs  build.rs  check.rs  compile_commands.rs  debug.rs  deps.rs  doc.rs  fmt.rs  install.rs  lint.rs  migrate.rs  mod.rs  new.rs  toolchain.rs
docs/: Ideas.md  TODO.md  architecture.md  backlog.md  cargo-vs-freight.md  cmake-interop.md  compiler-templates.md  future-toolchains.md  include-hygiene-audit.md  include-hygiene.md  lsp-architecture.md  manifest-reference.md  pipeline.md  plan-toolchain-roles.md  platform-sources.md  registry-plan.md  requirements_handling.md  roadmap.md
etc/freight/: config.toml
examples/: README.md
examples/ada-hello/: b~main.adb  b~main.ads  b~main.ali  freight.toml  main.ali
examples/asm-hello/: compile_commands.json  freight.toml
examples/c-executable/: crane.toml
examples/c-simple/: compile_commands.json
examples/cpp-modules/: compile_commands.json  crane.toml
examples/cuda-hello/: README.md  freight.toml
examples/d-hello/: README.md  freight.toml
examples/doc-example/: README.md  compile_commands.json  crane.toml  freight.toml
examples/executable/: crane.toml
examples/features-demo/: compile_commands.json
examples/fortran-executable/: crane.toml
examples/fortran-hello/: freight.toml
examples/hello-cpp/: compile_commands.json  crane.toml
examples/migrated-from-cmake/: CMakeLists.txt  compile_commands.json  crane.toml  freight.toml
examples/multi-bin/: compile_commands.json  freight.toml
examples/multi-lang/: compile_commands.json  crane.toml
examples/objcpp-hello/: freight.toml
examples/odin-hello/: freight.toml
examples/opencl-hello/: freight.toml
examples/platform-deps/: compile_commands.json  freight.toml
examples/prebuilt-demo/: build.freight  compile_commands.json  freight.toml
examples/static-lib/: freight.toml
examples/swift-hello/: freight.toml
examples/tri-lang/: forces_mod.mod  freight.toml
examples/with-build-script/: build.freight  compile_commands.json  freight.toml
examples/with-cmake-dep/: .gitignore  compile_commands.json  crane.toml
examples/with-deps/: compile_commands.json  freight.toml
examples/with-external-deps/: crane.toml  freight.toml
examples/with-git-dep/: compile_commands.json  (+2 more)
plugins/: README.md
src/: dep_cmds.rs  environment.rs  error.rs  event.rs  install.rs  lib.rs  lock.rs  new.rs  project.rs  supports.rs  vendor.rs
tests/: build_examples.rs  clean_and_rebuild.rs  cmake_migrate_native.rs  cmake_provide.rs  common.rs  error_examples.rs  flat_pkgs.rs  foreign_self.rs  manifest_validation.rs  plugin_autotools.rs  plugin_bison.rs  plugin_cmake.rs  plugin_codegen.rs  plugin_make.rs  plugin_meson.rs  public_defines.rs  transitive_optional_deps.rs
toolchains/: circle.rhai  clang.rhai  clang.toml  dmd.rhai  flang.rhai  fpc.rhai  gcc.rhai  gcc.toml  gfortran.rhai  gnat.rhai  gnat.toml  hipcc.rhai  icpx.rhai  icpx.toml  ifx.rhai  ispc.rhai  ispc.toml  ldc2.rhai  mojo.rhai  msvc.rhai  nasm.rhai  nasm.toml  nvcc.rhai  nvhpc.rhai  objc.rhai  odin.rhai  opencl.rhai  swift.rhai  tcc.rhai  v.rhai  yasm.rhai  zig.rhai  zigcc.rhai
vendors/: aarch64.toml  android.toml  arm.toml  clang.toml  dragonfly.toml  freebsd.toml  fuchsia.toml  gnu.toml  i686.toml  illumos.toml  ios.toml  linux.toml  llvm.toml  loongarch64.toml  macos.toml  mingw.toml  mips.toml  mips64.toml  msvc.toml  musl.toml  netbsd.toml  none.toml  openbsd.toml  powerpc.toml  powerpc64.toml  riscv32.toml  riscv64.toml  s390x.toml  solaris.toml  sparc64.toml  wasm32.toml  windows.toml  x86_64.toml
(+562 files in other folders)
