[workspace]
members = [
    "crates/freight",
    "crates/freight-core",
    "crates/freight-doc",
]
resolver = "2"

[workspace.dependencies]
# CLI
clap          = { version = "4", features = ["derive"] }
clap_mangen   = "0.2"
owo-colors    = "4"
indicatif     = "0.17"

# Manifest
toml_edit     = { version = "0.22", features = ["serde"] }
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
rmp-serde     = "1"

# Build engine
rayon         = "1"
walkdir       = "2"
regex         = "1"
sha2          = "0.10"
curl          = { version = "0.4", features = ["static-curl"] }
git2          = { version = "0.19", features = ["vendored-libgit2", "vendored-openssl"] }

# Dependency resolution
semver        = "1"
pulldown-cmark = "0.12"

# Error handling
anyhow        = "1"
thiserror     = "2"

# LSP
tower-lsp     = "0.20"
tokio         = { version = "1", features = ["rt-multi-thread", "io-std", "macros", "sync"] }
dashmap       = "6"
rhai          = { version = "1", features = ["sync"] }
notify        = { version = "6", features = ["macos_fsevent"] }
