[package]
name        = "freight"
version     = "0.1.1"
edition     = "2021"
license     = "Apache-2.0"
description = "Build tool and package manager for C/C++/Fortran/CUDA/Ada/assembly"

[lib]
name = "freight"
path = "src/lib.rs"

[[bin]]
name = "freight"
path = "src/cli/main.rs"

[features]
default   = []
rich-math = ["dep:ratatui-image", "dep:image", "dep:mathjax-svg-rs", "dep:resvg"]
# In-process C/C++ LSP backend (compiles a C++ FFI bridge + links libclang).
# Off by default — clangd serves C/C++; enable to use `freight lsp --use-clang-bridge`.
clang-bridge = ["dep:clang-bridge"]

[dependencies]
# Core library
anyhow        = "1"
thiserror     = "2"
toml_edit     = { version = "0.22", features = ["serde"] }
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
rmp-serde     = "1"
rayon         = "1"
walkdir       = "2"
glob          = "0.3"
makefile-lossless = "0.1"
regex         = "1"
sha2          = "0.10"
curl          = { version = "0.4", features = ["static-curl"] }
git2          = { version = "0.19", features = ["vendored-libgit2", "vendored-openssl"] }
semver        = "1"
owo-colors    = "4"
rhai          = "1"   # embedded scripting engine for build plugins

# CLI
clap          = { version = "4", features = ["derive"] }
clap_mangen   = "0.2"
pulldown-cmark = "0.12"
flate2        = "1"
tar           = "0.4"
zip           = { version = "2", default-features = false, features = ["deflate"] }
notify        = { version = "6", features = ["macos_fsevent"] }
ratatui       = "0.30"
crossterm     = "0.29"
tokio         = { version = "1", features = ["full"] }
reqwest       = { version = "0.12", features = ["json"] }
keyring       = "4"
keyring-core  = "1"
toml          = "0.8"
# Optional rich-math rendering
ratatui-image  = { version = "11", default-features = false, features = ["image-defaults"], optional = true }
image          = { version = "0.25", optional = true }
mathjax-svg-rs = { version = "0.4", optional = true }
resvg          = { version = "0.47", optional = true }
tui-markdown = "0.3.7"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Git deps so the freight repo builds standalone (CI checks it out alone). In the
# monorepo workspace these are redirected to the local submodules via [patch] in
# the workspace Cargo.toml.
clang-bridge       = { git = "https://github.com/freight-app/clang-bridge.git", optional = true }
fortran-lsp        = { git = "https://github.com/freight-app/fortran-lsp.git" }

[dev-dependencies]
tempfile = "3"
