[package]
name    = "crane-importer"
version = "0.1.0"
edition = "2021"

[dependencies]
crane-core         = { path = "../crane-core" }
cmake-parser       = "0.1.0-beta.1"
makefile-lossless  = "0.3"
regex              = { workspace = true }
thiserror          = { workspace = true }

[dev-dependencies]
tempfile = "3"
