[package]
name    = "crane-lsp"
version = "0.1.0"
edition = "2021"

[lib]
name = "crane_lsp"
path = "src/lib.rs"

[[bin]]
name = "crane-lsp"
path = "src/main.rs"

[dependencies]
crane-core = { path = "../crane-core" }
tower-lsp  = { workspace = true }
tokio      = { workspace = true }
dashmap    = { workspace = true }
serde_json = { workspace = true }
