[package]
name    = "crane"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "crane"
path = "src/main.rs"

[dependencies]
crane-core  = { path = "../crane-core" }
crane-lsp   = { path = "../crane-lsp" }
clap        = { workspace = true }
owo-colors  = { workspace = true }
anyhow      = { workspace = true }
tokio       = { workspace = true }
