[package]
name    = "freight-doc"
version = "0.1.0"
edition = "2021"

[lib]
name = "freight_doc"
path = "src/lib.rs"

[[bin]]
name = "freight-doc"
path = "src/main.rs"

[dependencies]
walkdir        = { workspace = true }
pulldown-cmark = { workspace = true }
clap           = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
