[package]
name    = "freight-doc"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
name = "freight_doc"
path = "src/lib.rs"

[[bin]]
name = "freight-doc"
path = "src/main.rs"

[features]
clang     = ["dep:clang"]
rich-math = []

[dependencies]
walkdir        = { workspace = true }
pulldown-cmark = { workspace = true }
clap           = { workspace = true }
clang          = { version = "2", optional = true, features = ["runtime"] }
